# plugable

./: .gitignore  .mutmut-cache  .travis.yml  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: plugable.yaml
scripts/: determine_version.py
src/plugable/: __init__.py  class_registry.py  plugable_meta.py
test/: test_class_registry.py  test_import.py  test_plugable.py
test-reports/: test-results.xml
